--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,10 @@ body {
 	width: 300px;
 }
 
+#after-save-container {
+	width: auto !important;
+}
+
 #after-save-container .button {
 	background-color: #EEE;
 	padding: 1.5em;
