--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,10 @@ body {
 	color: white;
 }
 
+a {
+	color: white;
+}
+
 #canvas-container, #toolbar, #settings, #tutorial {
 	width: 960px;
 	margin: 0 auto;
